--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,10 +14,11 @@
             android:background="#3f51b5">
 
                 <ImageView
+                    android:id="@+id/backbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:paddingTop="15dp"
+                    android:paddingTop="10dp"
                     android:src="@drawable/ic_backarrow" />
 
                 <TextView
@@ -41,7 +42,7 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="Email Id"
-            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@"
             android:inputType="textEmailAddress"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +61,7 @@
             android:layout_marginStart="8dp"
             android:ems="10"
             android:hint="Password"
-            android:inputType="numberPassword"
+            android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.517"
@@ -87,7 +88,7 @@
         <Button
             android:id="@+id/button5"
             android:layout_width="210dp"
-            android:layout_height="49dp"
+            android:layout_height="53dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
