--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,11 +26,21 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:text="Log In"
+                    android:textStyle="bold"
                     android:textAlignment="center"
                     android:textSize="20sp"
                     android:textColor="#FFFF"
                     />
         </RelativeLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/olympia"
+            android:paddingLeft="50sp"
+            android:paddingRight="50sp"
+            android:paddingBottom="330sp"
+            />
 
         <EditText
             android:id="@+id/email"
@@ -40,23 +50,23 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@"
             android:ems="10"
             android:hint="Email Id"
-            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@"
             android:inputType="textEmailAddress"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.52"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/linearLayout"
-            app:layout_constraintVertical_bias="0.225"
+            app:layout_constraintVertical_bias="0.326"
             tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="339dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="324dp"
+            android:layout_marginBottom="284dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:ems="10"
