--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="Sign Up"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:textSize="20sp"
             android:textColor="#FFFF"
